<resources>
    <string name="app_name">Tp</string>
    <string name="tp1">TP 1</string>
    <string name="tp2">TP 2</string>
    <string name="tp3">TP 3</string>
    <string name="process">In process</string>
    <string name="part1">Part 1</string>
    <string name="part2">Part 2</string>
    <string name="part3">Part 3</string>
    <string name="part4">Part 4</string>
    <string name="user_name">User name</string>
    <string name="email">Email</string>
    <string name="first_factor">FIRST FACTOR</string>
    <string name="second_factor">SECOND FACTOR</string>
    <string name="third_factor">THIRD FACTOR</string>
    <string name="provide_email">PROVIDE EMAIL</string>
    <string name="provide_code">PROVIDE CODE</string>
    <string name="try_again">Try again</string>
    <string name="processing_request">Processing Request</string>
    <string name="processing_failed">Processing Failed</string>
    <string name="please_wait">PLEASE WAIT</string>
    <string name="check_info">Checking Your Info</string>
    <string name="provide_password">PROVIDE PASSWORD</string>
    <string name="wrong_email">WRONG EMAIL</string>
    <string name="wrong_password">WRONG PASSWORD</string>
    <string name="wrong_code">WRONG CODE</string>
    <string name="enter">ENTER</string>
    <string name="password">Password</string>
    <string name="type">Type</string>
    <string name="value">Value</string>
    <string name="extra_char">Extra character</string>
    <string name="a">a</string>
    <string name="b">b</string>
    <string name="Send">Send</string>
    <string name="encryption">Encryption</string>
    <string name="attack">Attack</string>
    <string name="Defense">Defense</string>
    <string name="decryption">Decryption</string>
    <string name="enter_text">Enter a text</string>
    <string name="enter_password">Enter a password</string>
    <string name="authenticate">Authenticate</string>
    <string name="message">Add a message</string>
    <string name="mirror">Mirror</string>
    <string name="affine">Affine</string>
    <string name="caesar">Caesar</string>
    <string name="rotation">Rotation</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="algorithm">Algorithm :</string>
    <string name="attempts">You have exhausted all your attempts</string>
    <string name="retry">Retry</string>
    <string name="strong">STRONG</string>
    <string name="authentication">AUTHENTICATION</string>
    <string name="accepted">ACCEPTED</string>
    <string name="refused">REFUSED</string>
    <string name="menu">MENU</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>