<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.tp1.dialog.ChoicesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="20dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_mirror"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/mirror"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:background="@drawable/button_shape"
            android:layout_marginVertical="18dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_affine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/affine"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@drawable/button_shape"
            android:layout_marginVertical="18dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_caesar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/caesar"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@drawable/button_shape"
            android:layout_marginVertical="18dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_rotation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/rotation"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@drawable/button_shape"
            android:layout_marginVertical="18dp"/>
    </LinearLayout>

</FrameLayout>