<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.tp1.Tp1ContainerFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/txt_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="@color/black"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_part2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button_shape"
                android:textColor="@color/white"
                android:text="@string/part2"
                android:textSize="20sp"
                android:padding="30dp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_part3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="80dp"
                android:layout_marginVertical="40dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button_shape"
                android:layout_below="@id/btn_part2"
                android:textColor="@color/white"
                android:text="@string/part3"
                android:textSize="20sp"
                android:padding="30dp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_part4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="80dp"
                android:layout_below="@id/btn_part3"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button_shape"
                android:textColor="@color/white"
                android:text="@string/part4"
                android:textSize="20sp"
                android:padding="30dp"/>

        </RelativeLayout>
    </RelativeLayout>

</FrameLayout>