<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.tp1.dialog.OptionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginVertical="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_left"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_shape_white"
                android:textColor="@color/black"
                android:text="@string/left"
                android:textAllCaps="false"
                android:layout_marginEnd="10dp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_right"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_shape_white"
                android:textColor="@color/black"
                android:text="@string/right"
                android:textAllCaps="false"
                android:layout_marginStart="10dp"/>

        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:background="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxStrokeColor="@color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/value"
                android:inputType="number"
                android:background="@drawable/edt_design"
                android:textColor="@color/black">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="180dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:background="@drawable/authentication_button_shape">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_send"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/Send"
                    android:textSize="15sp"
                    android:visibility="visible"
                    android:background="@drawable/authentication_button_shape"
                    android:textAllCaps="false"/>
                <ProgressBar
                    android:id="@+id/progress_send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CustomProgressBarStyle"
                    android:visibility="gone"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</FrameLayout>