<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.tp3.Tp3EmailAuthenticationFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/city">
        <LinearLayout
            android:id="@+id/layout_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginTop="100dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/outfit_bold"
                android:text="@string/first_factor"
                android:textColor="@color/yellow"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/txt_notify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:fontFamily="@font/outfit_light"
                android:text="@string/provide_email"/>
        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/container_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:background="@drawable/edt_design"
            app:boxStrokeWidth="0dp"
            android:layout_marginTop="70dp"
            android:layout_centerInParent="true"
            app:boxStrokeColor="@color/transparent"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTintMode="src_atop">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_user_name_auth"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:inputType="text"
                android:background="@drawable/edt_design_tp3"
                android:textColor="@color/black">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            app:cardCornerRadius="180dp"
            android:layout_below="@+id/container_email"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="120dp">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:background="@drawable/authentication_button_shape_tp3">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_authenticate_auth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/enter"
                    android:textSize="17sp"
                    android:layout_centerInParent="true"
                    android:visibility="visible"
                    android:background="@drawable/authentication_button_shape_tp3"
                    android:textAllCaps="false"/>
                <ProgressBar
                    android:id="@+id/progress_auth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CustomProgressBarStyleTp3"
                    android:layout_centerInParent="true"
                    android:visibility="gone"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

</FrameLayout>